<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.lieberkind.shoppinglist.AddItemFragment"
    android:orientation="horizontal"
    >

    <Button android:id="@+id/add_item_button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/add_item_button"
        android:layout_alignParentRight="true">
    </Button>

    <EditText android:id="@+id/item_amount"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/add_item_button"
        android:layout_alignBottom="@id/add_item_button"
        android:inputType="number"
        android:hint="@string/item_amount_hint">
    </EditText>

    <EditText android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/item_amount"
        android:layout_alignBottom="@id/add_item_button"
        android:hint="@string/item_name_hint">
    </EditText>


</RelativeLayout>
